--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "name": "mcy689",
         "email": "nideshijian@gmail.com"
     }],
+    "minimum-stability": "dev",
     "autoload": {
         "psr-4": {
             "Mcy689\\SmsFilter\\": "src"
